# openg

./: CMakeLists.txt  InputControl.cpp  InputControl.h  main.cpp
